apps/dozzle/ingresses/dozzle-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dozzle-ingress
  labels:
    app.kubernetes.io/name: dozzle
    app.kubernetes.io/part-of: dozzle
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: "localhost"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: dozzle-service
                port:
                  number: 8080
